font size and slight spacing fixes for tabs

--- a/src/blocks/block-horizontal-tabs/styles/style.scss
+++ b/src/blocks/block-horizontal-tabs/styles/style.scss
@@ -31,6 +31,10 @@
 	text-decoration: none;
 }
 
+.c9-horizontal-tabs .tab-content {
+	padding: 25px;
+}
+
 @media only screen and (max-width: 768px) {
 	.c9-horizontal-tabs>.nav.nav-tabs {
 		flex-wrap: wrap;
